swagger response and dto for Response, Error and PaginatedResponse
